--- a/src/pages/AddNotes/addNotes.css
+++ b/src/pages/AddNotes/addNotes.css
@@ -13,8 +13,18 @@
     gap: 20px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px #dbecfe; 
-    animation: scaleUp 0.5s ease-out;
+    animation: scaleUp2 .3s ease-out;
 }
+
+@keyframes scaleUp2 {
+    from {
+      transform: translate(var(--x),var(--y)) scale(0); 
+    }
+    to {
+      transform: translate(-50%, -50%) scale(1);
+    }
+  }
+
 
 .addNotes-container form{
     height: 100%;
