--- a/src/pages/ToDo/toDo.css
+++ b/src/pages/ToDo/toDo.css
@@ -1,11 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
+
 .todo{
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 20px;
-  animation: slideUp 0.5s ease-out ;
+  gap: 30px;
+  /* animation: slideUp 0.3s linear ; */
   padding: 0px 20px;
 }
+
 @keyframes slideUp {
     from {
       transform: translateY(100%);
@@ -13,15 +16,16 @@
     to {
       transform: translateY(0);
     }
-  }
+}
 
-  
-  .task-container{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-  }
-    .todo-date{
-      margin: 10px;
-      font-weight: 600;
-    }
+.task-container{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.todo-date{
+  font-family: "Kanit", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+}
