--- a/src/components/NoteCard/noteCard.css
+++ b/src/components/NoteCard/noteCard.css
@@ -5,7 +5,6 @@
     /* min-width in  defined in notes with the help of grid*/
     height: 200px;
     border-radius: 20px;
-    background-color: rgb(224, 179, 244);
     padding: 10px 15px;
     box-shadow: 0px 0px 10px #cbe4ff; 
     display: flex;
@@ -15,6 +14,7 @@
     font-family: "Kanit", sans-serif;
     font-weight: 600;
     font-style: normal;
+    transition: background-color 0.5s ease;
 }
 
 .note-container:hover{
@@ -119,4 +119,12 @@
     position: absolute;
     top: 10px;
     right: 10px;
+}
+
+.dark-theme .note-container{
+    filter: brightness(1) invert(1);
+}
+
+.dark-theme .note-container__active{
+    filter: brightness(1) invert(1);
 }
