--- a/src/components/Spinner/spinner.css
+++ b/src/components/Spinner/spinner.css
@@ -12,7 +12,7 @@
     width: 60px;
     height: 60px;
     border-radius: 50%;
-    border-left-color: #09f;
+    border-left-color: var(--base);
     animation: spin 1s ease infinite;
   }
   
@@ -27,7 +27,7 @@
 
   .loading-text{
     width: 55px;
-    color: rgb(48, 48, 48);
+    color: var(--text-color)
   }
   .loading-text::after {
     content: '';
