--- a/src/pages/AddToDo/addToDo.css
+++ b/src/pages/AddToDo/addToDo.css
@@ -5,15 +5,16 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: white;
+    background-color: var(--primary);
     padding: 30px 40px;
     z-index: 1000;
     display: flex;
     flex-direction: column;
     gap: 20px;
     border-radius: 20px;
-    box-shadow: 0px 0px 10px #dbecfe; 
+    box-shadow: 0px 0px 10px var(--box-shadow); 
     animation: scaleUp3 0.3s ease-out;
+    transform-origin: top;
 }
 @keyframes scaleUp3 {
     from {
@@ -37,6 +38,8 @@
     border: none;
     font-size: 1rem;
     padding: 10px;
+    background-color: var(--primary);
+    color: var(--text-color);
 }
 
 
@@ -51,9 +54,11 @@
     font-optical-sizing: auto;
     font-style: normal;
     font-weight: bold;
-    box-shadow: 0 0 5px rgb(176, 176, 176);
     text-shadow: 0 0 1px rgb(76, 76, 76);   
     cursor: pointer;
+}
+.dark-theme .addtodo-container form button {
+    background-color: var(--base);
 }
 
 .overlay{
@@ -72,4 +77,5 @@
     right: 10px;
     font-size: 2rem !important;
     filter: drop-shadow(0 0 1px rgb(102, 102, 102));
+    color: var(--text-color);
 }
