--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -7,9 +7,9 @@
     /* min-height: fit-content; */
     width: 100%; 
     overflow-y: auto;
-    background-color: rgb(255, 255, 255);
+    background-color: var(--primary);
     border-radius: 30px 30px 0 0;
-    box-shadow: 0px 0px 10px rgba(152, 214, 255, 0.921); 
+    box-shadow: 0px 0px 8px var(--box-shadow); 
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -18,10 +18,10 @@
     padding-bottom: 40px;
     animation: slideUp 0.5s ease-out forwards;
     font-family: "Kanit", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-
-
+    font-weight: 400;
+    font-style: normal;
+    color: var(--text-color);
+    transition: background-color 0.5s ease;
 }
 
 @keyframes slideUp {
@@ -94,10 +94,13 @@ footer button{
     font-optical-sizing: auto;
     font-style: normal;
     font-weight: bold;
-    box-shadow: 0 0 10px rgb(251, 198, 198);
+    box-shadow: 0 0 10px var(--box-shadow);
     text-shadow: 0 0 2px rgb(255, 207, 207);
     cursor: pointer;
-  
+}
+
+.dark-theme footer .button-top{
+    background-color: var(--base);
 }
 
 footer .button-top{
