--- a/src/pages/Menu/menu.css
+++ b/src/pages/Menu/menu.css
@@ -4,25 +4,25 @@
     height: 90svh;
     width: 100%;
     overflow: auto;
-    background-color: rgb(255, 255, 255);
+    background-color: var(--primary);
     border-radius: 30px 30px 0 0;
-    box-shadow: 0px 0px 10px rgba(152, 214, 255, 0.921); 
+    box-shadow: 0px 0px 10px var(--box-shadow); 
     display: flex;
     flex-direction: column;
     align-items: center;
     animation: slideUp 0.5s ease-out;
+    transition: background-color 0.3s ease;
+    transition: height 0.2s linear; 
 }
+
 @keyframes slideUp {
     from {
-      transform: translateY(100%);
+        transform: translateY(100%);
     }
     to {
       transform: translateY(0);
     }
-  }
-
-
-
+}
 .menu-container header{
     display: flex;
     justify-content: center;
@@ -33,14 +33,15 @@
 .search-bar{
     font-size: 1rem;
     padding: 8px 0px 8px 30px;
-    background-color: rgb(244, 244, 244);
+    width: 100%;
+    background-color: rgb(244, 244, 244); 
     border: none;
     border-radius: 10px;
 }
 
 .add-notes__icon{
     font-size: 3.25rem !important;
-    color: #157dec;
+    color: var(--base);
     cursor: pointer;
     outline: none;
 } 
@@ -54,10 +55,10 @@ ul{
 }
 
 li{
-    background-color: #b5d4f5;
+    background-color: var(--secondary);
     padding: 10px 15px;
     border-radius: 50px;
-    box-shadow: 0px 0px 10px rgba(152, 214, 255, 0.921);
+    box-shadow: 0px 0px 5px var(--box-shadow);
     font-weight: bolder; 
 }
 
@@ -67,7 +68,7 @@ li{
 }
 
 .active{
-    color: white;
+    color: var(--active-text-color);
 }
 
 
