--- a/src/pages/SignUp/signUp.css
+++ b/src/pages/SignUp/signUp.css
@@ -7,9 +7,9 @@
     /* min-height: fit-content; */
     width: 100%; 
     overflow-y: auto;
-    background-color: rgb(255, 255, 255);
+    background-color: var(--primary);
     border-radius: 30px 30px 0 0;
-    box-shadow: 0px 0px 10px rgba(152, 214, 255, 0.921); 
+    box-shadow: 0px 0px 10px var(--box-shadow); 
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -20,8 +20,8 @@
     font-family: "Kanit", sans-serif;
     font-weight: 400;
     font-style: normal;
-
-
+    color: var(--text-color);
+    transition: background-color 0.5s ease;
 }
 
 @keyframes slideUp {
@@ -108,3 +108,4 @@ footer .button-bottom{
     color: black;
     background-color: rgb(255, 214, 221);
 }
+
