feat: change todo css

--- a/src/components/ToDoCard/toDoCard.css
+++ b/src/components/ToDoCard/toDoCard.css
@@ -20,10 +20,14 @@
 }
 
 .task-name {
+    max-width: 60%;
     text-transform: capitalize;
     font-weight: 400;
-    color: black
+    color: black;
+    word-break: break-all;
+    
   }
+
 .task.done .task-name {
     text-decoration: line-through;
     color: var(--active-text-color);
