feat: add deleteSpinner

--- a/src/components/NoteCard/noteCard.css
+++ b/src/components/NoteCard/noteCard.css
@@ -113,6 +113,7 @@
     font-size: 2rem !important;
     filter: drop-shadow(0 0 1px rgb(102, 102, 102));
     cursor: pointer;
+    color: white
 }
 
 .note-deleteIcon{
