--- a/src/pages/ToDo/toDo.css
+++ b/src/pages/ToDo/toDo.css
@@ -18,6 +18,13 @@
     }
 }
 
+.empty-task{
+  font-weight: 400;
+  text-align: center;
+  margin-top: 20px;
+  color: var(--text-color);
+}
+
 .task-container{
   display: flex;
   flex-direction: column;
