--- a/src/components/DeleteSpinner/deleteSpinner.css
+++ b/src/components/DeleteSpinner/deleteSpinner.css
@@ -7,8 +7,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent overlay */
-  z-index: 1000; /* Ensure it's above other content */
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1000; 
 }
 
 .deleting-message {
