--- a/src/components/NoteCard/noteCard.css
+++ b/src/components/NoteCard/noteCard.css
@@ -36,7 +36,7 @@
     flex-direction: column;
     gap: 20px;
     border-radius: 20px;
-    box-shadow: 0px 0px 10px #dbecfe; 
+    box-shadow: 0px 0px 5px #dbecfe; 
     animation: scaleUp .2s linear;
 }
 
@@ -106,14 +106,14 @@
     backdrop-filter: blur(2px);
     z-index: 1000;
 }
-.overlay-close{
+.note-container__active .overlay-close{
     position: absolute;
     top: 10px;
     right: 10px;
     font-size: 2rem !important;
     filter: drop-shadow(0 0 1px rgb(102, 102, 102));
     cursor: pointer;
-    color: white
+    color: var(--active--text-color);
 }
 
 .note-deleteIcon{
