--- a/src/pages/SignUp/signUp.css
+++ b/src/pages/SignUp/signUp.css
@@ -69,6 +69,11 @@ form .user-input{
   font-style: normal;
 }
 
+form .user-input:focus {
+    outline: 2px solid black;
+}
+
+
 
 .terms{
     width: 100%;
@@ -94,8 +99,7 @@ footer button{
     font-optical-sizing: auto;
     font-style: normal;
     font-weight: bold;
-    box-shadow: 0 0 10px rgb(251, 198, 198);
-    text-shadow: 0 0 2px rgb(255, 207, 207);
+    box-shadow: 0 0 5px rgb(251, 198, 198);
     cursor: pointer;
   
 }
