feat: add theme change icon

--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,10 @@
   justify-content: space-between;
 }
 
+.theme-regulator{
+  display: flex;
+}
+
 .navbar h1{
   color: var(--base);
   font-size: 2.5rem;
